# rover

./: .gitignore  .gitmodules
bringup/: CMakeLists.txt  package.xml
bringup/config/: adi_imu.yaml  chassis.yaml  ekf.yaml  mapviz.mvc  navsat.yaml  planner.yaml
bringup/include/chassis_driver/: chassis_driver_node.hpp
bringup/launch/: bringup.launch.py  test.launch.py
bringup/launch/include/: adi_imu.launch.py  chassis.launch.py  description.launch.py  mapviz.launch.py  navsat.launch.py  planner.launch.py  robot_localization.launch.py
bringup/src/: chassis_driver_node.cpp  execute.cpp
description/: CMakeLists.txt  package.xml
description/launch/: display.launch.py
description/urdf/: rover.urdf.xacro
description/urdf/links/: base_link.urdf.xacro
description/urdf/sensors/: imu.urdf.xacro
planner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
planner/include/local_planner/: local_planner_node.hpp
planner/src/global_planner/: global_planner_node.py
planner/src/local_planner/: local_planner_node.cpp
planner/src/nmea_tcp_driver/: nmea_tcp_driver_node.py
scripts/: plot_trajectory.py
utilities/: CMakeLists.txt  package.xml
utilities/include/utilities/: data_utils.hpp
