[metadata]
name = planner
version = 0.1.0
description = A ROS2 package that integrates C++ and Python components for planning tasks.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/planner
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    some_other_python_dependency

[options.extras_require]
dev =
    pytest
    flake8

[options.packages.find]
where = src